CollectionUtils refactoring